src/test/compile-fail/wrong-ret-type.rs
// error-pattern: mismatched types
fn mk_int() -> uint { let i: int = 3; ret i; }
fn main() { }
